# permafrost

./: Cargo.toml  README.md
derive/: Cargo.toml  README.md
derive/src/: lib.rs
derive/src/embed/: mod.rs
derive/src/embed/sequence/: block.rs  mod.rs
derive/src/embed/transform/: mod.rs  segment.rs  transformate.rs
derive/src/embed/transform/kind/: append.rs  case.rs  concatenate.rs  count.rs  flatten.rs  mod.rs  prefix.rs  reverse.rs  stringify.rs  ungroup.rs  unstringify.rs
permafrost/: Cargo.toml
permafrost/src/: lib.rs
